[package]
name = "social_graph_from_db"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
dotenv = "0.15"
postgres = "0.19.10"
reqwest = { version = "0.12.15", features = ["json", "default-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }

